Progress converting AP filters to Adhoc